Adjust styling slightly and add gh-pages.

--- a/css/master.css
+++ b/css/master.css
@@ -7,6 +7,11 @@ h1 {
   font-weight: bolder;
 }
 
+label {
+  font-weight: bold;
+  font-family: monospace;
+}
+
 .container {
   background-color: orange;
 }
